# challenge-geospatial

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  exceptions.py  logger.py  registry.py
app/controllers/: location.py
app/controllers/swagger/: location_model.py
app/database/: sqlite.py  utils_sqlite.py
app/repositories/: location_repository.py
app/schemas/: location_schema.py
app/services/: location_service.py
scritps/: init_db_spatial.sh
tests/: conftest.py
tests/controllers/: test_location_controllers.py
tests/repositories/: test_location_repository.py
tests/services/: test_location_service.py
